[package]
name = "rudis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
env_logger = "0.11.3"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.21"
parking_lot = "0.12.1"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["net", "rt", "time", "macros", "io-util", "rt-multi-thread", "sync", "fs"] }
toml = "0.8.10"
